Melhorias em busca e autenticação
Adicionada ação de busca por nome em CategoriasController.
Injeção de dependência de SignInManager em MovimentacoesController.
Formulário de busca adicionado em Index.cshtml para categorias.
Campo UsuarioId alterado para oculto em Create.cshtml.
Melhorias na exibição de dados em Index.cshtml para movimentações.

--- a/ControleEstoque/Views/Movimentacoes/Index.cshtml
+++ b/ControleEstoque/Views/Movimentacoes/Index.cshtml
@@ -34,32 +34,33 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Produto.Marca)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Quantidade)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Tipo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DataMovimentacao)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Usuario.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Observacao)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.MovimentacaoId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.MovimentacaoId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MovimentacaoId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Produto.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Quantidade)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Tipo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DataMovimentacao)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Usuario.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Observacao)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.MovimentacaoId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.MovimentacaoId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.MovimentacaoId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
