--- a/ControleEstoque/Views/Categorias/Index.cshtml
+++ b/ControleEstoque/Views/Categorias/Index.cshtml
@@ -9,6 +9,13 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+<form asp-controller="Categorias" asp-action="Buscar" method="get" class="mb-3">
+    <div class="input-group">
+        <input type="text" name="termo" class="form-control" placeholder="Buscar por nome da categoria..." value=@ViewData["termoBusca"] />
+        <button class="btn btn-outline-secondary" type="submit">Buscar</button>
+    </div>
+</form>
 <table class="table">
     <thead>
         <tr>
@@ -19,17 +26,18 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.CategoriaId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CategoriaId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CategoriaId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nome)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.CategoriaId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.CategoriaId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.CategoriaId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
