--- a/ControleEstoque/Views/Movimentacoes/Create.cshtml
+++ b/ControleEstoque/Views/Movimentacoes/Create.cshtml
@@ -23,6 +23,7 @@
                     <label asp-for="ProdutoId" class="control-label"></label>
                     <select asp-for="ProdutoId" class="form-control" asp-items="ViewBag.ProdutoId"></select>
                 </div>
+
                 <div class="form-group">
                     <label asp-for="Quantidade" class="control-label"></label>
                     <input asp-for="Quantidade" class="form-control" />
@@ -45,8 +46,9 @@
 
                 </div>
                 <div class="form-group">
-                    <label asp-for="UsuarioId" class="control-label"></label>
-                    <select asp-for="UsuarioId" class="form-control" asp-items="ViewBag.UsuarioId"></select>
+
+                    <input type="hidden" asp-for="UsuarioId" class="form-control" />
+
                 </div>
                 <div class="form-group">
                     <label asp-for="Observacao" class="control-label"></label>
